# structure_factor

./: README.md  pyproject.toml  tmp_traj.xyz
src/structure_factor/: gr2sf.py  gsd2sf.py  structure2sf.py
test/: Cu-Zr-Al.xyz  test.sh
