[project]
name = "sq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.26.0",
    "click>=8.3.0",
    "dynasor>=2.3",
    "gsd>=4.2.0",
    "numpy>=2.3.4",
]

[project.scripts]
sq = "structure_factor.gsd2sf:sq_of_xyz_to_file"
