[project]
name = "sq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.26.0",
    "click>=8.3.0",
    "dynasor>=2.3",
    "numpy>=2.3.4",
]

[project.scripts]
sq = "structure_factor.structure2sf:sq_of_structure_to_file"
fwhm = "structure_factor.structure2sf:fwhm_of_structure_to_file"
